--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "p2p-backend"
+name = "app"
 version = "0.1.0"
 description = "Thesis for university, backend for P2P Hosting platform"
-authors = ["Volodymyy Vorobiov - volodymyrvorobiov2005@gmail.com"]
+authors = ["Volodymyy Vorobiov - <volodymyrvorobiov2005@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -20,7 +20,29 @@ psycopg2-binary = "^2.9.9"  # PostgreSQL driver
 celery = "^5.3.6"
 redis = "^5.0.1"
 
-docker = "^6.1.3"           # Для керування Docker з Python
+docker = "^6.1.3"
 
 # Monitoring
 psutil = "^5.9.6"
+
+[tool.poetry.group.dev.dependencies]
+black = "^25.1.0"
+isort = "^6.0.1"
+flake8 = "^7.2.0"
+mypy = "^1.16.0"
+
+[tool.black]
+line-length = 88
+
+[tool.isort]
+profile = "black"
+line_length = 88
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = "E203"
+
+[tool.mypy]
+python_version = "3.11"
+warn_return_any = true
+ignore_missing_imports = true
