--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,11 @@ services:
   postgres:
     image: postgres:15-alpine
     container_name: p2p-postgres
-    environment:
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=p2p_db
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    env_file: "backend/.env"
 
   redis:
     image: redis:7-alpine
