--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -46,5 +46,6 @@ extend-ignore = "E203"
 
 [tool.mypy]
 python_version = "3.11"
+files = ["app"]
 warn_return_any = true
 ignore_missing_imports = true
