--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install Poetry
         run: pip install poetry
 
+      - name: Update poetry lock file
+        run: poetry lock
+
       - name: Install backend dependecies
         working-directory: ./backend
         run: poetry install
